# weather_data_collector

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_24_2245-02022f44ba54_create_wheatr_data_table.py  2024_09_26_2248-d7fc443ced64_create_table_wether_coleection.py
data/: output.xlsx
src/: api_client.py  config.py  database.py  main.py  models.py
src/ExcelExport/: ExcelExport.py
src/WeatherCollector/: WeatherCollector.py  models.py  schemas.py
