[tool.poetry]
name = "weather-data-collector"
version = "0.0.1"
description = ""
authors = ["tutuevm"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
apscheduler = "^3.10.4"
alembic = "^1.13.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
